# object-centric-world-model

./: .gitignore  README.md  pyproject.toml
docs/: claims.md  differentiation_from_best_of_n_wam.md  differentiation_from_prior_projects.md  differentiation_from_wam.md  final_audit.md  paper_claim_coverage.md  results_digest.md  reviewer_attacks.md  theory.md
experiments/: run_experiments.py
paper/: abstract.md  checklist.md  experiments.md  iclr_object_centric_best_of_n.tex  intro.md  limitations.md  method.md  object_binding_tail_audit_iclr.tex  related_work.md  theory.md
results/: artifact_manifest.json  claims_status.json  claims_status.md  learned_object_model_summary.json  learned_repair_policy_summary.json  leave_one_failure_summary.json  paper_claim_coverage.json  pilot_budget_summary.json  pilot_calibration_summary.json  repair_model_selection.json  run_summary.json  verification_log.json
results/tables/: calibration_diagnostics.csv  counterfactual_target_metrics.csv  counterfactual_target_seed_metrics.csv  deployment_policy_metrics.csv  deployment_policy_seed_metrics.csv  domain_randomization_metrics.csv  domain_randomization_seed_metrics.csv  exact_law_validation.csv  extreme_object_count_metrics.csv  extreme_object_count_seed_metrics.csv  learned_ablation.csv  learned_domain_shift.csv  learned_learning_curve.csv  (+45 more)
scripts/: build_iclr_paper.sh  run_all.sh  run_claim_audit.sh  run_smoke.sh
tests/: test_artifacts_claims.py  test_differentiation.py  test_envs.py  test_learned_model.py  test_metrics_strength.py  test_selectors_repairs.py  test_theory.py
(+20 files in other folders)
